@@ -4346,5 +4346,32 @@
       0
     ],
     "price": 300
+  },
+  {
+    "id": 164,
+    "atypeId": 1,
+    "description": "A tome containing the information\nnecessary to cast \\is[121].",
+    "etypeId": 8,
+    "traits": [
+      {
+        "code": 43,
+        "dataId": 121,
+        "value": 1
+      }
+    ],
+    "iconIndex": 369,
+    "name": "Ice II (Tome)",
+    "note": "<Cannot Rename>\n\n<Synthesis Ingredients>\nBlank Tome: 1\nFrozen Core: 3\nIce Essence: 5\nEnchanting Crystal: 1\n</Synthesis Ingredients>\n<Mask Name: AoE Wind Spell>\n<Synthesis SE: Book2>",
+    "params": [
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 300
   }
 ]
