@@ -16,11 +16,12 @@ Additions:
  - Added a new and unique fishing system.
  - Added roaming Giant Rats in the Dark Forest.
  - Added 4 new dungeons!
- - Added 9 new non-tome skills:
+ - Added 10 new non-tome skills:
   ~ Player 1, 2 skills:
    > [P] Steadfast: Passive skill learned at level 24.
    > Heavenswield: Magic skill learned at level 25.
-  ~ Player 2, 2 skills:
+  ~ Player 2, 3 skills:
+   > Ice II: Magic skill learnable at level 20 via the skill learn menu.
    > Blood Boost: Magic skill learned at level 22. (This was once Player 3's skill. She can no longer learn it. It will be removed when transferring a save from Alpha 14.)
    > Magical Breeze: Magic skill learned at level 23.
   ~ Player 3, 5 skills:
